1.2.1

- fix: Combinations of the same product are not all passed to the Order API bug
- fix: EAN13 is not passed in order API bug
- fix: Stock quantity not correctly inserted into order API bug
- fix: Stock quantity is missing in order API call bug

1.2.0

- add separate customizations
- add quantity of customization
- fix: add image if object exists
- fix: add customization key placeholder if customization key name is not available
- style: several PSR-2 corrections


1.1.2

- feat: Add stock quantity if stock management is enabled

1.1.1

- fix: Assign smarty variable to avoid notice in backoffice
- fix: Add index file to /docs
- fix: Add English html docs 


1.1.0

- feat: add product customizations

1.0.8

- improve explanation in config page

1.0.7

- change order id to order reference

1.0.6

- remove unneeded description
- fix format price
- fix BC for version 1.6
 - change code style for validation and readability
      - following PSR standard
      - write more readable code (not too much things on one line, ternaries, readable variables names)
      - indenting
 - change category
 - solve validation errors
 - remove unused sql
- fix ImageType BC for version 1.6

- change code style for validation and readability
- following PSR standard
- write more readable code (not too much things on one line, ternaries, readable variables names)
- indenting
- change category

solve validation errors

remove unused sql

1.0.5

- Add configuration explanation
- Type cast total and shipping_cost as float
- Add Accept to API call headers
- Extend log for unknown errors